--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             <nav></nav>
 
             <div>
-                <form action=""></form>
+                <form id="animal-form">
+                    <input type="text" class="form-control" id="animal-input" placeholder="Type a new animal here">
+                    <input id="add-animal" type="submit" value="submit">
+                </form>
             </div>
 
             <div id="buttons"></div>
