--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <head>
         <title>GifTastic</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
-        <nav></nav>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="#">GifTastic</a>
+        </nav>
     
         <div>
             <form id="animal-form">
-                <input type="text" class="form-control" id="animal-input" placeholder="Add a new animal here ">
+                <input type="text" id="animal-input" placeholder="Add a new animal here ">
                 <input id="add-animal" type="submit" value="submit">
             </form>
         
