--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
                 <input type="text" id="animal-input" placeholder="Add a new animal here ">
                 <input id="add-animal" type="submit" value="submit">
             </form>
+        </div>
         
         <div id="buttons"></div>
 
         <div id="gifContainer"></div>
 
-        <script type="text/javascript" src="assets/JavaScript/giphy.js"></script>
+        <script type="text/javascript" src="assets/Javascript/giphy.js"></script>
     </body>
 </html>
