--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
         <div id="gifContainer"></div>
 
-        <script type="text/javascript" src="assets/Javascript/giphy.js"></script>
+        <script type="text/javascript" src="assets/javascript/giphy.js"></script>
     </body>
 </html>
